Cherry-pick de9dae2e5319. rdar://problem/99197933

[macOS] Canvas.getContext('2d').drawImage on a camera video stream does not work when tab is backgrounded
    https://bugs.webkit.org/show_bug.cgi?id=242679
    rdar://problem/96937033

    When page gets hidden, silent videos are paused.
    This is fine, except if videos are drawn to canvas, since canvas might be updated, might be captured and sent to the network.
    In fact, when videos are drawn to canvas, we can no longer consider that they are hidden.
    For that reason, we update HTMLMediaElement::elementIsHidden to return false when a video is drawn to canvas.
    This ensures that the video will not get paused in that case.

    Covered by LayoutTests/fast/mediastream/video-background-with-canvas.html.

    Reviewed by Eric Carlson.

    * LayoutTests/fast/mediastream/video-background-with-canvas-expected.txt: Added.
    * LayoutTests/fast/mediastream/video-background-with-canvas.html: Added.
    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::elementIsHidden const):
    * Source/WebCore/html/HTMLMediaElement.h:
    * Source/WebCore/html/HTMLVideoElement.cpp:
    (WebCore::HTMLVideoElement::paintCurrentFrameInContext):
    * Source/WebCore/platform/graphics/MediaPlayer.cpp:
    (WebCore::MediaPlayer::setVisibleForCanvas):
    * Source/WebCore/platform/graphics/MediaPlayer.h:

    Canonical link: https://commits.webkit.org/252738@main

Canonical link: https://commits.webkit.org/252432.265@safari-7614-branch